--- a/IA/IA.csproj
+++ b/IA/IA.csproj
@@ -160,6 +160,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="bayes-algoritmo\bayes-logic.cs" />
     <Compile Include="DataBaseContext\DataBaseContext.cs" />
     <Compile Include="DataBaseContext\IAInicializador.cs" />
     <Compile Include="index.aspx.cs">
@@ -176,8 +177,8 @@
     <Compile Include="Lecturas\UnzipJson.cs" />
     <Compile Include="Lecturas\UnzipXML.cs" />
     <Compile Include="Lecturas\UrlUploader.cs" />
-    <Compile Include="models\Categorias.cs" />
-    <Compile Include="models\idiomas.cs" />
+    <Compile Include="models\muestra.cs" />
+    <Compile Include="models\idioma.cs" />
     <Compile Include="models\Palabras.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Watin\IPersistStreamInit.cs" />
