--- a/IA/IA.csproj
+++ b/IA/IA.csproj
@@ -163,6 +163,8 @@
     <Compile Include="bayes-algoritmo\bayes-logic.cs" />
     <Compile Include="DataBaseContext\DataBaseContext.cs" />
     <Compile Include="DataBaseContext\IAInicializador.cs" />
+    <Compile Include="detectarIdioma\DrawChart.cs" />
+    <Compile Include="detectarIdioma\LanguageDetector.cs" />
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
