--- a/IA/packages.config
+++ b/IA/packages.config
@@ -13,5 +13,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="TweetSharp" version="2.3.1" targetFramework="net452" />
 </packages>
