--- a/IA/IA.csproj
+++ b/IA/IA.csproj
@@ -59,6 +59,10 @@
       <HintPath>..\packages\TweetSharp.2.3.1\lib\4.0\Hammock.ClientProfile.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Interop.SHDocVw">
       <HintPath>..\Ext\Interop.SHDocVw.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -160,6 +164,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="aprender\Aprender.cs" />
     <Compile Include="bayes-algoritmo\bayes-logic.cs" />
     <Compile Include="DataBaseContext\DataBaseContext.cs" />
     <Compile Include="DataBaseContext\IAInicializador.cs" />
@@ -182,7 +187,9 @@
     <Compile Include="models\muestra.cs" />
     <Compile Include="models\idioma.cs" />
     <Compile Include="models\Palabras.cs" />
+    <Compile Include="models\relacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="stopWords\stopWords.cs" />
     <Compile Include="Watin\IPersistStreamInit.cs" />
     <Compile Include="Watin\MsHtmlBrowser.cs" />
     <Compile Include="Watin\MsHtmlNativeBrowser.cs" />
