Solo falta la parte de categorias en json

--- a/IA/IA.csproj
+++ b/IA/IA.csproj
@@ -166,6 +166,7 @@
   <ItemGroup>
     <Compile Include="aprender\Aprender.cs" />
     <Compile Include="bayes-algoritmo\bayes-logic.cs" />
+    <Compile Include="bayes-algoritmo\DrawChartCategories.cs" />
     <Compile Include="DataBaseContext\DataBaseContext.cs" />
     <Compile Include="DataBaseContext\IAInicializador.cs" />
     <Compile Include="detectarIdioma\DrawChartMessage.cs" />
